# DeerMes

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  deermes.permissions.json  deermes.runtime.json  pyproject.toml
docs/: ARCHITECTURE.md  CURRENT_ARCHITECTURE_REPORT.md
src/deermes/: __init__.py  cli.py  security.py  tui.py
src/deermes/chat/: __init__.py  session.py
src/deermes/config/: __init__.py  control.py  settings.py
src/deermes/execution/: __init__.py  graph.py  planner.py  reporter.py
src/deermes/execution/deerflow/: __init__.py  roles.py  supervisor.py
src/deermes/learning/: __init__.py  context.py  memory.py  profile.py  reflection.py
src/deermes/models/: messages.py
src/deermes/providers/: __init__.py  anthropic.py  base.py  catalog.py  echo.py  ollama.py  openai_compatible.py
src/deermes/runtime/: __init__.py  app.py  deerflow_app.py  loop.py  runlog.py
src/deermes/tools/: __init__.py  base.py  factory.py  filesystem.py  shell.py
tests/: test_action_parser.py  test_context.py  test_deerflow_targets.py  test_memory.py  test_memory_search.py  test_shell_tool.py  test_tool_factory.py  test_tool_registry_subset.py
