[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deermes"
version = "0.1.0"
description = "A general-purpose AI agent framework with DeerFlow-style execution and Hermes-style learning."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "hompeaz" }]
dependencies = []

[project.scripts]
deermes = "deermes.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
